# ssquant

./: .gitignore  045.MD  AGENTS.md  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt  setup.py  setup_and_run.bat  运行_缠论5分钟回测.bat
ai_agent/: README.md  README_公众号版.md  app.py  history.json  prompt.py  settings.json
ai_agent/templates/: index.html
docs/: ADR-001-缠论5分钟策略架构评估.md  code-review-缠论多空信号策略.md  缠论5分钟策略-说明文档.md  缠论买卖点对照.md
examples/: A_CTP连接状态监测测试_真实断网.py  A_工具_导入数据库DB示例.py  A_工具_数据库管理_查看与删除.py  A_撤单重发示例.py  A_穿透式测试脚本.py  B_减仓策略.py  B_减仓策略_高性能.py  B_加仓策略.py  B_加仓策略_高性能.py  B_十大经典策略之Aberration.py  B_十大经典策略之Aberration_高性能.py  B_双均线策略.py  B_双均线策略_高性能.py  B_多品种多周期交易策略.py  B_多品种多周期交易策略_参数优化.py  B_多品种多周期交易策略_高性能.py  B_强弱截面轮动策略.py  B_强弱截面轮动策略_高性能.py  B_日内交易策略.py  B_机器学习策略_随机森林.py  B_机器学习策略_随机森林_高性能.py  B_正反手混合开平仓策略.py  B_正反手混合开平仓策略_高性能.py  B_正反手策略.py  B_正反手策略_高性能.py  B_海龟交易策略.py  B_海龟交易策略_高性能.py  B_缠论5分钟策略.py  B_缠论多空信号策略.py  B_网格交易策略.py  B_自动参数示例.py  B_自动换月示例.py  B_跨周期过滤策略.py  B_跨周期过滤策略_高性能.py  B_跨品种套利策略.py  B_跨品种套利策略_高性能.py  B_跨期套利策略.py  B_跨期套利策略_高性能.py  C_期权交易策略.py  C_期货期权组合策略.py  (+15 more)
ssquant/: __init__.py  git_config_export.txt
ssquant/api/: strategy_api.py
ssquant/backtest/: backtest_core.py  backtest_data.py  backtest_logger.py  backtest_results.py  html_report.py  live_trading_adapter.py  rollover_audit.py  rollover_engine.py  unified_runner.py
ssquant/config/: _server_config.py  config_helpers.py  trading_config.py
ssquant/ctp/: loader.py
ssquant/data/: __init__.py  (+10 more)
tests/: test_chanlun_e2e.py  test_chanlun_strategy.py
(+10 files in other folders)
