[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssquant"
version = "0.4.5"
description = "专业的期货CTP量化交易框架"
readme = "README.md"
requires-python = ">=3.9,<3.15"
license = {text = "MIT"}
authors = [
    {name = "SSQuant Team", email = "339093103@qq.com"}
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "requests>=2.25.0",
    "websockets>=10.0",
    "plotly>=5.18.0",
    "matplotlib>=3.5.0",
    "Pillow>=8.0.0",
    "scipy>=1.7.0",
    "akshare>=1.10.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=0.24.0",
    "joblib>=1.0.0",
    "statsmodels>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/songshuquant/ssquant"
Repository = "https://github.com/songshuquant/ssquant"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"ssquant.ctp" = ["py*/*.pyd", "py*/*.dll", "py*/*.so", "py*/*.py", "py*/*.lib"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "__pycache__/*", "*.pyc", "*.pyo"]

